--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="shortcut icon" href="../../flat-ui/images/favicon.ico">
-        <link rel="stylesheet" href="../../flat-ui/bootstrap/css/bootstrap.css">
-        <link rel="stylesheet" href="../../flat-ui/css/flat-ui.css">
+        <link rel="shortcut icon" href="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/images/favicon.ico">
+        <link rel="stylesheet" href="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/bootstrap/css/bootstrap.css">
+        <link rel="stylesheet" href="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/css/flat-ui.css">
         <!-- Using only with Flat-UI (free)-->
-        <link rel="stylesheet" href="../../common-files/css/icon-font.css">
+        <link rel="stylesheet" href="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/css/icon-font.css">
         <!-- end -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/css/style.css">
     </head>
 
     <body>
@@ -162,10 +162,10 @@
             <section id="section4">
             <div class="content-8 v-center">
                     <div class="container">
-                        <img width="300" height="200" alt="how to make an interative CV" src="../../common-files/img/content/Eg1.png"/>
-                        <img width="300" height="200" alt="Tutorial videos for Visual Basic Application & Excel Macro " src="../../common-files/img/content/Eg2.png"/>
-                        <img width="300" height="200" alt="Tutorial videos for learning Google App Script" src="../../common-files/img/content/Eg3.png"/>
-                        <img width="300" height="200" alt="Tutorial Videos for learning visualization data by Tableau" src="../../common-files/img/content/Eg4.png"/>
+                        <img width="300" height="200" alt="how to make an interative CV" src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/img/content/Eg1.png"/>
+                        <img width="300" height="200" alt="Tutorial videos for Visual Basic Application & Excel Macro " src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/img/content/Eg2.png"/>
+                        <img width="300" height="200" alt="Tutorial videos for learning Google App Script" src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/img/content/Eg3.png"/>
+                        <img width="300" height="200" alt="Tutorial Videos for learning visualization data by Tableau" src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/img/content/Eg4.png"/>
                         <h3>Awesome Samples and Tutorials for your needs </h3>
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
@@ -223,14 +223,14 @@
         </div>
 
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="../../common-files/js/jquery-1.10.2.min.js"></script>
-        <script src="../../flat-ui/js/bootstrap.min.js"></script>
-        <script src="../../common-files/js/modernizr.custom.js"></script>
-        <script src="../../common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
-        <script src="../../common-files/js/jquery.parallax.min.js"></script>
-        <script src="../../common-files/js/startup-kit.js"></script>
-        <script src="js/jquery.backgroundvideo.min.js"></script>
-        <script src="js/script.js"></script>
+        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/jquery-1.10.2.min.js"></script>
+        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/js/bootstrap.min.js"></script>
+        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/modernizr.custom.js"></script>
+        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
+        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/jquery.parallax.min.js"></script>
+        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/startup-kit.js"></script>
+        <script src="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
+        <script src="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/js/script.js"></script>
         <script type='text/javascript'>                    var divElement = document.getElementById('viz1536084637889');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='461px';vizElement.style.height='527px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     </body>
 </html>
