--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <section id ="section3">
                 <div class="content-8 v-center">
                     <div class="container">
-                        <img src="../../common-files/img/content/dpa-toolkit-for-schools.png" width="397" height="193" alt="">
+                        <img src="Developer/common-files/img/content/dpa-toolkit-for-schools.png" width="397" height="193" alt="">
 
                         <h3>Take a look to our amazing ToolKits</h3>
 
@@ -162,10 +162,10 @@
             <section id="section4">
             <div class="content-8 v-center">
                     <div class="container">
-                        <img width="300" height="200" alt="how to make an interative CV" src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/img/content/Eg1.png"/>
-                        <img width="300" height="200" alt="Tutorial videos for Visual Basic Application & Excel Macro " src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/img/content/Eg2.png"/>
-                        <img width="300" height="200" alt="Tutorial videos for learning Google App Script" src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/img/content/Eg3.png"/>
-                        <img width="300" height="200" alt="Tutorial Videos for learning visualization data by Tableau" src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/img/content/Eg4.png"/>
+                        <img width="300" height="200" alt="how to make an interative CV" src="Developer/common-files/img/content/Eg1.png"/>
+                        <img width="300" height="200" alt="Tutorial videos for Visual Basic Application & Excel Macro " src="Developer/common-files/img/content/Eg2.png"/>
+                        <img width="300" height="200" alt="Tutorial videos for learning Google App Script" src="Developer/common-files/img/content/Eg3.png"/>
+                        <img width="300" height="200" alt="Tutorial Videos for learning visualization data by Tableau" src="Developer/common-files/img/content/Eg4.png"/>
                         <h3>Awesome Samples and Tutorials for your needs </h3>
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
@@ -223,14 +223,14 @@
         </div>
 
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/jquery-1.10.2.min.js"></script>
-        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/js/bootstrap.min.js"></script>
-        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/modernizr.custom.js"></script>
-        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
-        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/jquery.parallax.min.js"></script>
-        <script src="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/js/startup-kit.js"></script>
-        <script src="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
-        <script src="file:///Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/js/script.js"></script>
+        <script src="Developer/common-files/js/jquery-1.10.2.min.js"></script>
+        <script src="Developer/flat-ui/js/bootstrap.min.js"></script>
+        <script src="Developer/common-files/js/modernizr.custom.js"></script>
+        <script src="Developer/common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
+        <script src="Developer/common-files/js/jquery.parallax.min.js"></script>
+        <script src="Developer/common-files/js/startup-kit.js"></script>
+        <script src="Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
+        <script src="Developer/samples/sample-04/js/script.js"></script>
         <script type='text/javascript'>                    var divElement = document.getElementById('viz1536084637889');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='461px';vizElement.style.height='527px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     </body>
 </html>
