--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Nhung </title>
+        <title>Mande Tools for All </title>
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -23,17 +23,17 @@
                     <div class="navbar" role="navigation">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle"></button>
-                            <a class="brand" href="#">Toolkits</a>
+                            <a class="brand" href="#">NhungLe</a>
                          </div>
 	                        <div class="collapse navbar-collapse pull-right">
 	                            <ul class="nav pull-left">
 	                                <li class="active"><a href="index.html">Home</a></li>
-	                                <li class = "nav-visible"><a href="Portfolio-2.html">Portfolio</a></li>
+	                                <li class = "nav-visible"><a href="Portfolio-2.html">About</a></li>
+	                                <li><a href="#">Tools</a></li>
 	                                <li><a href="#">Tutorials</a></li>
-	                                <li><a href="#">Contact</a></li>
 	                            </ul>
 	                            <form class="navbar-form pull-right">
-	                                <a class="btn btn-info" href="#">Donate</a>
+	                                <a class="btn btn-info" href="#">Subscribe</a>
 	                            </form>
                         	</div>
                     </div>
@@ -46,70 +46,19 @@
                 <div>
                     <div class="container">
                         <div class="hero-unit">
-                            <h1>Monitoring and Evaluation Tools for All</h1>
-                            <p>
-                                is a hub of sharing tutorials and toolkits
+                            <h1>MANDE TOOLS FOR ALL</h1>
+                            <p> A place to share my stories to learn codes to design tools and solutions
                                 <br/>
-                                for better management of Startup Projects and Businesses.
+                                with my desire to make a better management at grassroot levels.
                             </p>
                         </div>
                     </div>
                 </div>
                 <a class="control-btn fui-arrow-down" href="#section2"> </a>
             </section>
-
             <!-- content-7  -->
             <section id ="section2">
-                <div class="content-7 v-center">
-
-                    <div class="container">
-                        <h3>Take a look in our awesome toolkits</h3>
-
-                        <div class="row v-center">
-                            <div class="col-sm-3">
-                                <div>
-                                    Provide your sample toolkits to adapt  
-                                    <br/>
-                                    different contexts, sectors and businesses.
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="col-sm-offset-1">
-                                    <div class="screen-wrapper">
-                                        <div class='tableauPlaceholder' id='viz1536084637889' style='position: relative'>
-                                        	<noscript>
-                                        		<a href='#'>
-                                        			<img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Toolkits&#47;Dashboard1&#47;1_rss.png' style='border: none' />
-                                        		</a>
-                                        	</noscript>
-                                        	<object class='tableauViz'  style='display:none;'>
-                                        		<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-                                        		<param name='embed_code_version' value='3' /> 
-                                        		<param name='site_root' value='' />
-                                        		<param name='name' value='Toolkits&#47;Dashboard1' />
-                                        		<param name='tabs' value='no' />
-                                        		<param name='toolbar' value='yes' />
-                                        		<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Toolkits&#47;Dashboard1&#47;1.png' /> 
-                                        		<param name='animate_transition' value='yes' />
-                                        		<param name='display_static_image' value='yes' />
-                                        		<param name='display_spinner' value='yes' />
-                                        		<param name='display_overlay' value='yes' />
-                                        		<param name='display_count' value='yes' />
-                                        	</object></div>                
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                            	<div class="col-sm-offset-2">
-                                    <h6>Dynamic Approaches</h6>
-                                    Learning by practices through tutorial videos, excercises, coaching
-                                    <h6>Design your owned tools</h6>
-                                    Start to produce your handy tools for better management 
-                           		</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                            <div class='tableauPlaceholder' id='viz1536686937935' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Se&#47;Self-developmenttoolkits&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Self-developmenttoolkits&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Se&#47;Self-developmenttoolkits&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>             
             </section>
 
             <!-- content-23  -->
@@ -231,6 +180,5 @@
         <script src="Developer/common-files/js/startup-kit.js"></script>
         <script src="Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
         <script src="Developer/samples/sample-04/js/script.js"></script>
-        <script type='text/javascript'>                    var divElement = document.getElementById('viz1536084637889');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='461px';vizElement.style.height='527px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-    </body>
+           <script type='text/javascript'>                    var divElement = document.getElementById('viz1536686937935');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.5)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 </html>
