--- a/index-VI.html
+++ b/index-VI.html
@@ -23,17 +23,17 @@
                     <div class="navbar" role="navigation">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle"></button>
-                            <a class="brand" href="index.html">NhungLe</a>
+                            <a class="brand" href="index-VI.html">NhungLe</a>
                          </div>
 	                        <div class="collapse navbar-collapse pull-right">
 	                            <ul class="nav pull-left">
-	                                <li class="active"><a href="index.html">Home</a></li>
-	                                <li class = "nav-visible"><a href="About.html">About</a></li>
-	                                <li><a href="#">Tools</a></li>
-	                                <li><a href="#">Tutorials</a></li>
+	                                <li class="active"><a href="index-VI.html">Trang Chủ</a></li>
+	                                <li class = "nav-visible"><a href="About-VI.html">Về Tôi</a></li>
+	                                <li><a href="#">Công Cụ</a></li>
+	                                <li><a href="#">Hướng Dẫn</a></li>
 	                            </ul>
 	                            <form class="navbar-form pull-right">
-	                                <a class="btn btn-info" href="index-VI.html">VIE</a>
+	                                <a class="btn btn-info" href="index.html">EN</a>
 	                            </form>
                         	</div>
                     </div>
@@ -46,10 +46,10 @@
                 <div>
                     <div class="container">
                         <div class="hero-unit">
-                            <h1>MANDE TOOLS FOR ALL</h1>
-                            <p> A place to share my stories about learning codes and data to design tools
+                            <h1>Công Cụ Quản Lý Cho Mọi Người</h1>
+                            <p> Đây là nơi tôi kể câu chuyện của mình cách tôi đã học như thế nào để thiết kế công cụ
                                 <br/>
-                                with my desire to make a better management at grassroot levels.
+                                với mục đích tạo nên giải pháp hiệu quả hơn từ những vấn đề nhỏ nhất.
                             </p>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                 <div>
                     <div class="container">
                         <div class="hero-unit hero-unit-bordered">
-                            <h1>Sample Toolkits</h1>
+                            <h1>Các mẫu công cụ đơn giản</h1>
                         </div>
                     </div>
                 </div>
@@ -79,13 +79,13 @@
                     <div class="container">
                         <img src="/Users/nhung/Documents/GitHub/NhungLe/Developer/samples/sample-04/img/discover-drive-mezzell.gif" width="397" height="193" alt="">
 
-                        <h3>Take a look to my sample toolkits</h3>
+                        <h3>Hãy xem các mẫu công cụ của tôi</h3>
 
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
-                                <p>I have built great basic tools for adapting with small business and projects
+                                <p>Tôi tạo ra những công cụ đơn giản phù hợp cho các dự án và doanh nghiệp nhỏ
                                 </p>
-                                <a class="btn btn-large btn-clear" href="#">TRY IT NOW</a>
+                                <a class="btn btn-large btn-clear" href="#">KHÁM PHÁ</a>
                             </div>
                         </div>
                     </div>
@@ -97,9 +97,9 @@
                 <div>
                     <div class="container">
                         <div class="hero-unit-bordered">
-                            <h1>Want to learn building
+                            <h1>Bạn muốn tự tạo ra
                             <br class="hidden-phone">
-                            your owned toolkits</h1>
+                            công cụ cho chính bạn</h1>
                         </div>
                     </div>
                 </div>
@@ -114,22 +114,22 @@
                         <img width="300" height="200" alt="Tutorial videos for Visual Basic Application & Excel Macro " src="Developer/common-files/img/content/Eg2.png"/>
                         <img width="300" height="200" alt="Tutorial videos for learning Google App Script" src="Developer/common-files/img/content/Eg3.png"/>
                         <img width="300" height="200" alt="Tutorial Videos for learning visualization data by Tableau" src="Developer/common-files/img/content/Eg4.png"/>
-                        <h3>Numbers of Samples and Tutorials for your needs </h3>
+                        <h3>Các bài hướng dẫn xây dựng công cụ </h3>
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
                                 <p>
-                                     lso provide you the different samples and tutorials of Excel, Tableau for your better presentation for your ideas and concepts
+                                     Giúp bạn thực hành trên các mẫu và hướng dẫn khác nhau trên Excel và Tableau giúp bạn trình bày các ý tưởng và nội dung một cách tốt hơn
                                 <br/>
-                                    The samples are updated day by day 
+                                    Các bài hướng dẫn được cập nhập thường xuyên
                                 </p>
-                                <btn class="btn btn-large btn-clear" id="myBtn">SUBSCRIBE NOW</btn>
+                                <btn class="btn btn-large btn-clear" id="myBtn">ĐĂNG KÝ CẬP NHẬP</btn>
                                 <!-- The Modal -->
                                 <div class = "signup-form">
                                 <div class="modal" id="myModal" >
                                   <!-- Modal content -->
                                   <div class="modal-content">
                                     <span class="close">&times;</span>
-                                    <p>You will get newsletter regularly</p>
+                                    <p>Bạn sẽ nhận được các bài hướng dẫn mới khi đăng kí</p>
                                   </div>
                                 </div>
                                 </div>
@@ -142,8 +142,8 @@
             <!-- content-11  -->
             <section class="content-11">
                 <div class="container">
-                    <span>You have good tools, you make better decisions</span>
-                    <a class="btn btn-large btn-danger" href="#">TRY IT NOW</a>
+                    <span>Bạn làm chủ một công cụ tốt, giúp bạn ra quyết định tốt hơn</span>
+                    <a class="btn btn-large btn-danger" href="#">KHÁM </a>
                 </div>
             </section>
 
@@ -156,13 +156,13 @@
                         </div>
                         <div class="col-sm-7">
                             <div class="additional-links">
-                                Be sure to take a look to our <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a>
+                                Xin hãy xem trước các <a href="#">Quy định sử dụng</a> và <a href="#">Chính sách riêng tư</a>
                             </div>
                         </div>
                         <div class="col-sm-3">
                             <h6>Hanoi, HN</h6>
                             <div class="address">
-                                Hancorp Plaza, 72 Tran Dang Ninh Street <br> Hanoi, HN, 10000
+                                72 Tran Dang Ninh Street <br> Hanoi, HN, 10000
                             </div>
                         </div>
                     </div>
