--- a/About-VI.html
+++ b/About-VI.html
@@ -20,22 +20,22 @@
             <!-- header-10 -->
             <header class="header-10">
                 <div class="container">
-                    <div class="navbar col-sm-12" role="navigation">
+                    <div class="navbar" role="navigation">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle"></button>
-                            <a class="brand" href="index.html">Toolkits</a>
+                            <a class="brand" href="index-VI.html">NhungLe</a>
                          </div>
-                        <div class="collapse navbar-collapse pull-right">
-                            <ul class="nav pull-left">
-                                <li class="active"><a href="index.html">Home</a></li>
-                                <li><a href="Portfolio-2.html">Portfolio</a></li>
-                                <li><a href="#">Tutorials</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                            <form class="navbar-form pull-left">
-                                <a class="btn btn-info" href="#">Donate</a>
-                            </form>
-                        </div>
+                            <div class="collapse navbar-collapse pull-right">
+                                <ul class="nav pull-left">
+                                    <li class="active"><a href="index-VI.html">Trang Chủ</a></li>
+                                    <li class = "nav-visible"><a href="About-VI.html">Về Tôi</a></li>
+                                    <li><a href="#">Công Cụ</a></li>
+                                    <li><a href="#">Hướng Dẫn</a></li>
+                                </ul>
+                                <form class="navbar-form pull-right">
+                                    <a class="btn btn-info" href="About.html">EN</a>
+                                </form>
+                            </div>
                     </div>
                 </div>
             </header>
