--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </p>
                                 <button class="btn btn-large btn-clear" onclick="document.getElementById('myModal').style.display='block'" style="width:auto;">SUBSCRIBE NOW</button>
                                 <!-- The Modal -->
-								 <div id="myModal" class="modal">
+								 <div id="myModal" class="content-8 modal">
 								  <span onclick="document.getElementById('myModal').style.display='none'" class="close" title="Close Modal">&times;</span>
 								  <form class="content-8 modal-content" action="/action_page.php">
 								    <div class="content-8 container">
