--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <!-- The Modal -->
 								 <div id="myModal" class="content-8 modal">
 								  <span onclick="document.getElementById('myModal').style.display='none'" class="close" title="Close Modal">&times;</span>
-								  <form class="content-8 modal-content" action="/action_page.php">
+								  <form class="content-8 modal-content" action="/action_page.php" method="post">
 								    <div class="content-8 container">
 								      <h3>SUBSCRIPTION</h3>
 								      <p>Please subscribe to get updated posts regularly</p>
