--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="Developer/common-files/css/icon-font.css">
         <!-- end -->
         <link rel="stylesheet" href="Developer/samples/sample-04/css/style.css">
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -47,7 +48,7 @@
                     <div class="container">
                         <div class="hero-unit">
                             <h1>MANDE TOOLS FOR ALL</h1>
-                            <p> A place to share my stories about learning codes and data to design tools
+                            <p> A place to share my stories about learning codes and data for designing tools
                                 <br/>
                                 with my desire to make a better management at grassroot levels.
                             </p>
@@ -110,15 +111,11 @@
             <section id="section4">
             <div class="content-8 v-center">
                     <div class="container">
-                        <img width="300" height="200" alt="how to make an interative CV" src="Developer/common-files/img/content/Eg1.png"/>
-                        <img width="300" height="200" alt="Tutorial videos for Visual Basic Application & Excel Macro " src="Developer/common-files/img/content/Eg2.png"/>
-                        <img width="300" height="200" alt="Tutorial videos for learning Google App Script" src="Developer/common-files/img/content/Eg3.png"/>
-                        <img width="300" height="200" alt="Tutorial Videos for learning visualization data by Tableau" src="Developer/common-files/img/content/Eg4.png"/>
                         <h3>Numbers of Samples and Tutorials for your needs </h3>
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
                                 <p>
-                                     Also provide you the different samples and tutorials of Excel, Tableau for your better presentation for your ideas and concepts
+                                     Also provide you the different samples and tutorials of Excel, Tableau for your better presentation your ideas and concepts
                                 <br/>
                                     The samples are updated regularly 
                                 </p>
@@ -126,17 +123,21 @@
                                 <!-- The Modal -->
 								 <div id="myModal" class="content-8 modal">
 								  <span onclick="document.getElementById('myModal').style.display='none'" class="close" title="Close Modal">&times;</span>
-								  <form class="content-8 modal-content" action="/action_page.php" method="post">
-								    <div class="content-8 container">
-								      <h3>SUBSCRIPTION</h3>
-								      <p>Please subscribe to get updated posts regularly</p>
-								      <label for="email"><b>Email</b></label>
-								      <input type="text" placeholder="Enter Email" name="email" required>
-								        <button type="button" onclick="document.getElementById('myModal').style.display='none'" class="cancelbtn">Cancel</button>
-								        <button type="submit" class="signupbtn">Sign Up</button>
-								      </div>
+								 <div id="mc_embed_signup">
+									<form class="content-8 modal-content" action="https://nhungleh.us19.list-manage.com/subscribe/post?u=196276fe57cf1dc27cd454d7c&amp;id=82978b5514" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+								    <div id="mc_embed_signup_scroll">
+								    <div class ="content-8 container">
+								    <h3>SUBSCRIPTION</h3>
+									<p for="mce-EMAIL">Suscribe for getting latest posts regularly</p>
+								</br>
+									<label for="email"><b>Email</b></label>
+									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+								    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_196276fe57cf1dc27cd454d7c_82978b5514" tabindex="-1" value=""></div>
+								    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 								    </div>
-								  </form>
+								    </form>
+								</div>
 								</div>
                             </div>
                         </div>
