--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								    <div id="mc_embed_signup_scroll">
 								    <div class ="content-8 container">
 								    <h3>SUBSCRIPTION</h3>
-									<p for="mce-EMAIL">Suscribe for getting latest posts regularly</p>
+									<p for="mce-EMAIL">Subscribe for getting latest posts regularly</p>
 								</br>
 									<label for="email"><b>Email</b></label>
 									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
