--- a/index-VI.html
+++ b/index-VI.html
@@ -147,7 +147,7 @@
             <section class="content-11">
                 <div class="container">
                     <span>Bạn làm chủ một công cụ tốt, giúp bạn ra quyết định tốt hơn</span>
-                    <a class="btn btn-large btn-danger" href="#">KHÁM </a>
+                    <a class="btn btn-large btn-danger" href="#">KHÁM PHÁ </a>
                 </div>
             </section>
 
