--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
         <!-- Using only with Flat-UI (free)-->
         <link rel="stylesheet" href="Developer/common-files/css/icon-font.css">
         <!-- end -->
-        <link rel="stylesheet" href="Developer/samples/sample-04/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
