--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Using only with Flat-UI (free)-->
         <link rel="stylesheet" href="Developer/common-files/css/icon-font.css">
         <!-- end -->
-        <link rel="stylesheet" href="Developer/samples/sample-04/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     </head>
 
@@ -78,7 +78,7 @@
             <section id ="section3">
                 <div class="content-8 v-center">
                     <div class="container">
-                        <img src="Developer/samples/sample-04/img/discover-drive-mezzell.gif" width="397" height="193" alt="">
+                        <img src="img/discover-drive-mezzell.gif" width="397" height="193" alt="">
 
                         <h3>Take a look to my sample toolkits</h3>
 
