--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	                            <ul class="nav pull-left">
 	                                <li class="active"><a href="index.html">Home</a></li>
 	                                <li class = "nav-visible"><a href="About.html">About</a></li>
-	                                <li><a href="#">Tools</a></li>
+	                                <li><a href="Tools.html">Tools</a></li>
 	                                <li><a href="#">Tutorials</a></li>
 	                            </ul>
 	                            <form class="navbar-form pull-right">
