--- a/EN/Post1-En.html
+++ b/EN/Post1-En.html
@@ -6,13 +6,13 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="shortcut icon" href="/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/images/favicon.ico">
-        <link rel="stylesheet" href="/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/bootstrap/css/bootstrap.css">
-        <link rel="stylesheet" href="/Users/nhung/Documents/GitHub/NhungLe/Developer/flat-ui/css/flat-ui.css">
+        <link rel="shortcut icon" href="../../Developer/flat-ui/images/favicon.ico">
+        <link rel="stylesheet" href="../../Developer/flat-ui/bootstrap/css/bootstrap.css">
+        <link rel="stylesheet" href="../../Developer/flat-ui/css/flat-ui.css">
         <!-- Using only with Flat-UI (free)-->
-        <link rel="stylesheet" href="/Users/nhung/Documents/GitHub/NhungLe/Developer/common-files/css/icon-font.css">
+        <link rel="stylesheet" href="../../Developer/common-files/css/icon-font.css">
         <!-- end -->
-        <link rel="stylesheet" href="/Users/nhung/Documents/GitHub/NhungLe/css/style.css">
+        <link rel="stylesheet" href="../../css/style.css">
         <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     </head>
 
