--- a/Tools.html
+++ b/Tools.html
@@ -103,3 +103,13 @@
 
 
         </div> 
+<script src="Developer/common-files/js/jquery-1.10.2.min.js"></script>
+        <script src="Developer/flat-ui/js/bootstrap.min.js"></script>
+        <script src="Developer/common-files/js/modernizr.custom.js"></script>
+        <script src="Developer/common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
+        <script src="Developer/common-files/js/jquery.parallax.min.js"></script>
+        <script src="Developer/common-files/js/startup-kit.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
+        <script src="Developer/samples/sample-04/js/script.js"></script>
+</html>
