--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- end -->
         <link rel="stylesheet" href="css/style.css">
         <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -23,7 +24,7 @@
                 <div class="container">
                     <div class="navbar" role="navigation">
                         <div class="navbar-header">
-                            <button type="button" class="navbar-toggle"></button>
+                            <button type="button" class="icon-bar navbar-toggle"></button>
                             <a class="brand" href="index.html">NhungLe</a>
                          </div>
 	                        <div class="collapse navbar-collapse pull-right">
