--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="navbar" role="navigation">
                         <div class="navbar-header">
-                            <button type="button" class="icon-bar navbar-toggle"></button>
+                            <button type="button" class="navbar-toggle"></button>
                             <a class="brand" href="index.html">NhungLe</a>
                          </div>
 	                        <div class="collapse navbar-collapse pull-right">
