--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="col-sm-6 col-sm-offset-3">
                                 <p>I have built great basic tools for adapting with small business and projects
                                 </p>
-                                <a class="btn btn-large btn-clear" href="#">TRY IT NOW</a>
+                                <a class="btn btn-large btn-clear" href="Tools.html">TRY IT NOW</a>
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
             <section class="content-11">
                 <div class="container">
                     <span>You have good tools, you make better decisions</span>
-                    <a class="btn btn-large btn-danger" href="#">TRY IT NOW</a>
+                    <a class="btn btn-large btn-danger" href="Tools.html">TRY IT NOW</a>
                 </div>
             </section>
 
