--- a/index-VI.html
+++ b/index-VI.html
@@ -29,7 +29,7 @@
 	                            <ul class="nav pull-left">
 	                                <li class="active"><a href="index-VI.html">Trang Chủ</a></li>
 	                                <li class = "nav-visible"><a href="About-VI.html">Về Tôi</a></li>
-	                                <li><a href="#">Công Cụ</a></li>
+	                                <li><a href="Tools-VI.html">Công Cụ</a></li>
 	                                <li><a href="#">Hướng Dẫn</a></li>
 	                            </ul>
 	                            <form class="navbar-form pull-right">
@@ -85,7 +85,7 @@
                             <div class="col-sm-6 col-sm-offset-3">
                                 <p>Tôi tạo ra những công cụ đơn giản phù hợp cho các dự án và doanh nghiệp nhỏ
                                 </p>
-                                <a class="btn btn-large btn-clear" href="#">KHÁM PHÁ</a>
+                                <a class="btn btn-large btn-clear" href="Tools-VI.html">KHÁM PHÁ</a>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
             <section class="content-11">
                 <div class="container">
                     <span>Bạn làm chủ một công cụ tốt, giúp bạn ra quyết định tốt hơn</span>
-                    <a class="btn btn-large btn-danger" href="#">KHÁM PHÁ </a>
+                    <a class="btn btn-large btn-danger" href="Tools-VI.html">KHÁM PHÁ </a>
                 </div>
             </section>
 
