--- a/EN/Tools/Post2-En.html
+++ b/EN/Tools/Post2-En.html
@@ -63,7 +63,7 @@
         </header><!-- .entry-header -->
 
         <div class="entry-content col span_2_of_3">
-            <p>An Online Version of Sale Management Tool for distance updating and collaboration with others. This version is upgraded with additional functions which <a href="https://nhungleh.com/EN/Tools/Post1-En.com">Offline Version</a> did not have
+            <p>An Online Version of Sale Management Tool for distance updating and collaboration with others. This version is upgraded with additional functions which <a href="https://nhungleh.com/EN/Tools/Post1-En.html">Offline Version</a> did not have
              </br>
             Updated functions:
             </br>
