--- a/VI/Tools/Post2-Vi.html
+++ b/VI/Tools/Post2-Vi.html
@@ -63,7 +63,7 @@
         </header><!-- .entry-header -->
 
         <div class="entry-content col span_2_of_3">
-            <p>Bản quản lý bán hàng online được tạo ra nhắm hỗ trợ cho việc quản lý cho bán hàng từ xa và cùng làm việc với người khác. Ngoài ra bản online còn cập nhập một số tính năng mới: thông báo có đơn hàng mới, cập nhập đơn hàng mới trên giao diện những tính năng của <a href="https://nhungleh.com/EN/Tools/Post1-En.com">Phiên Bản Ngoại Tuyến</a> không đáp ứng được
+            <p>Bản quản lý bán hàng online được tạo ra nhắm hỗ trợ cho việc quản lý cho bán hàng từ xa và cùng làm việc với người khác. Ngoài ra bản online còn cập nhập một số tính năng mới: thông báo có đơn hàng mới, cập nhập đơn hàng mới trên giao diện những tính năng của <a href="https://nhungleh.com/EN/Tools/Post1-Vi.html">Phiên Bản Ngoại Tuyến</a> không đáp ứng được
              </br>
             Mô Tả Tính Năng Mới được cập nhập
             </br>
